--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "An AI-powered web scraper.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "build:css": "tailwindcss -i ./public/css/input.css -o ./public/css/styles.css --watch"
+  "start": "node server.js",
+  "build:css": "npx tailwindcss -i ./public/css/input.css -o ./public/css/styles.css --watch"
   },
   "dependencies": {
     "axios": "^1.6.8",
