--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "axios": "^1.6.8",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.3"
+    
   }
 }
