--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
   "name": "ai-scraper-nodejs",
   "version": "1.0.0",
-  "description": "An AI-powered web scraper.",
   "main": "server.js",
   "scripts": {
-  "start": "node server.js",
-  "build:css": "npx tailwindcss -i ./public/css/input.css -o ./public/css/styles.css --watch"
+    "start": "node server.js",
+    "build:css": "npx tailwindcss -i ./public/css/input.css -o ./public/css/styles.css"
   },
   "dependencies": {
     "axios": "^1.6.8",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3" 
   },
-  "devDependencies": {
-    
-  }
+  "devDependencies": {}
 }
