--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "ai-scraper",
+  "name": "ai-web-scraper",
   "version": "1.0.0",
-  "description": "An AI-powered web scraper",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "npm run build:css && node server.js",
-    "build:css": "npx tailwindcss -i ./public/css/input.css -o ./public/css/style.css --watch"
+    "dev": "node --watch server.js",
+    "css": "tailwindcss -i ./public/css/input.css -o ./public/css/style.css --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.8",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
   },
