--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   ],
   "author": "carl",
   "license": "ISC",
-  "dependencies": {
+    "dependencies": {
+    "@sparticuz/chromium": "^123.0.1",
     "axios": "^1.6.8",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "puppeteer-core": "^22.10.0"
   }
 }
